--- a/jrocks-springular/springular-frontend/package.json
+++ b/jrocks-springular/springular-frontend/package.json
@@ -13,7 +13,6 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "7.0.5",
-    "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "7.0.3",
     "@angular/cdk": "7.0.4",
     "@angular/common": "7.0.3",
@@ -29,10 +28,10 @@
     "@angular/router": "7.0.3",
     "core-js": "2.5.7",
     "hammerjs": "2.0.8",
-    "ng": "0.0.0",
     "rxjs": "6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "bootstrap": "^4.1.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
