--- a/jrocks-core/pom.xml
+++ b/jrocks-core/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>be.unlock</groupId>
         <artifactId>jrocks-parent</artifactId>
-        <version>0.3.0-SNAPSHOT</version>
+        <version>0.3.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jrocks-core</artifactId>
@@ -35,7 +35,7 @@
 
         <!--<dependency>-->
             <!--<groupId>be.unlock</groupId>-->
-            <!--<artifactId>jrocks-plugin-bean</artifactId>-->
+            <!--<artifactId>jrocks-plugin-bean2</artifactId>-->
             <!--<version>${project.version}</version>-->
             <!--<optional>true</optional>-->
         <!--</dependency>-->
@@ -84,11 +84,7 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
-        <!--JDK Ex deps -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
+        <!-- Utility deps -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
