--- a/jrocks-plugin-bean2/pom.xml
+++ b/jrocks-plugin-bean2/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>jrocks-parent</artifactId>
         <groupId>be.unlock</groupId>
-        <version>0.3.0-SNAPSHOT</version>
+        <version>0.3.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jrocks-plugin-bean2</artifactId>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>be.unlock</groupId>
             <artifactId>jrocks-plugin-api</artifactId>
-            <version>0.3.0-SNAPSHOT</version>
+            <version>0.3.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.squareup</groupId>
@@ -70,8 +70,7 @@
                 </executions>
                 <configuration>
                     <javaVersion>${java.version}</javaVersion>
-                    <templateDirectory>${basedir}/src/main/resources</templateDirectory>
-                    <addAsTestSources>true</addAsTestSources>
+                    <classDirectory></classDirectory>
                     <discardLogicWhitespace>true</discardLogicWhitespace>
                 </configuration>
             </plugin>
