--- a/jrocks-parent/pom.xml
+++ b/jrocks-parent/pom.xml
@@ -23,6 +23,7 @@
         <module>../jrocks-plugin-bean-rocker</module>
         <module>../jrocks-plugin-bean-javapoet</module>
         <module>../jrocks-core</module>
+        <module>../jrocks-springular/springular-frontend</module>
         <module>../jrocks</module>
     </modules>
 
