--- a/jrocks-core/pom.xml
+++ b/jrocks-core/pom.xml
@@ -97,6 +97,14 @@
             <version>4.2</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Jpa API for annotations -->
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>1.0.1.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
