--- a/jrocks-plugin-api/pom.xml
+++ b/jrocks-plugin-api/pom.xml
@@ -11,6 +11,10 @@
             <version>2.9.7</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
     <parent>
