--- a/jrocks-core/pom.xml
+++ b/jrocks-core/pom.xml
@@ -105,6 +105,14 @@
             <version>1.0.1.Final</version>
         </dependency>
 
+        <!-- Groovy scripting language support to interpret plugin config file properties expressions-->
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-jsr223</artifactId>
+            <version>2.5.5</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
