--- a/jrocks-parent/pom.xml
+++ b/jrocks-parent/pom.xml
@@ -25,7 +25,7 @@
         <module>../jrocks-plugin-springular</module>
         <module>../jrocks-core</module>
         <!--<module>../jrocks-springular/springular-frontend</module>-->
-        <module>../jrocks-springular/springular-server</module>
+        <!--<module>../jrocks-springular/springular-server</module>-->
         <module>../jrocks</module>
     </modules>
 
